--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
+// src/app/store/types.ts
 export interface UploadedDocument {
   documentName: string;
-  documentUUID: string;
-  serverPath: string;
-  createdAt: string;
+  documentUUID: string;              // obrigatório
+  serverPath: string;                // "uuid/file.ext"
+  createdAt: string;                 // ISO string
   uploadedBy: { fullName?: string; userId?: string };
 
+  // opcionais
   documentSize?: number;
   documentStatus?: string;
-  documentURL?: string;
+  documentURL?: string;              // blob local para preview imediato
   documentURLPreview?: string;
-  serverUrlSigned?: string;
+  serverUrlSigned?: string;          // URL assinada (expira)
   itemRef?: string;
 }
+
+/**
+ * Alias para manter compatibilidade com lugares que usam `Document`
+ * (se você ainda precisa exportar esse nome).
+ */
+export type Document = UploadedDocument;
