--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,3 @@
-Unhandled Runtime Error
-
-
-Error: Maximum update depth exceeded. This can happen when a component repeatedly calls setState inside componentWillUpdate or componentDidUpdate. React limits the number of nested updates to prevent infinite loops.
-
-src\components\RadioGroup.tsx (27:5) @ _c2
-
-
-  25 | >(({ className, ...props }, ref) => {
-  26 |   return (
-> 27 |     <RadioGroupPrimitive.Item
-     |     ^
-  28 |       ref={ref}
-  29 |       className={cn(
-  30 |         "aspect-square h-[18px] w-[18px] rounded-full border-1 border-solid bg-white text-[#8A8C98] focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50",
-Call Stack
-67
-
-Show 60 ignore-listed frame(s)
-Array.map
-<anonymous> (0:0)
-button
-<anonymous> (0:0)
-_c2
-src\components\RadioGroup.tsx (27:5)
-Object.render
-src\components\Requests.tsx (597:23)
-Requests
-src\components\Requests.tsx (584:15)
-
-
 /* eslint-disable @typescript-eslint/no-explicit-any */
 "use client";
 import React, { useEffect, useState } from "react";
@@ -38,7 +7,7 @@ import ValidationContent from "./content/ValidationsContent";
 import { Documents } from "@/components/Documents";
 import { useAuthStore } from "@/app/store/auth/authStore";
 import { useDocumentStore } from "@/app/store/documentsStore/documentStore";
-import { Document, UploadedDocument } from "@/app/store/types";
+import { UploadedDocument } from "@/app/store/types";
 import RequestConfigProvider from "@/app/providers/getRequestProvider";
 import { TabsNavigation } from "@/components/TabsNavigation";
 import Requests from "@/components/Requests";
@@ -58,7 +27,7 @@ import { Approvals } from "@/components/Approvals";
 import AlertColorIcon from "@/app/assets/svg/alert-color.svg";
 import CancelRequestIcon from "@/app/assets/svg/close.svg";
 import { useCancelRequestProvider } from "@/app/providers/cancelRequestProvider";
-import api from "@/app/api";
+import api from "@/app/api"; // ajuste o path se for diferente
 
 type IPageTabsParams = {
   params: {
@@ -78,7 +47,9 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
   const { getRequestConfig } = RequestConfigProvider(params.requestId);
   const { userData } = useAuthStore((state) => state);
   const { documentList, setDocumentList } = useDocumentStore((state) => state);
+
   const { data } = getRequestConfig;
+
   const [pendingComments, setPendingComments] = useState<string[]>([]);
   const requestId = data?.requestId ? data.requestId : uuidv7();
   const [requestQualificationIsOpen, setRequestQualificationIsOpen] =
@@ -94,31 +65,21 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
     ?.flat()
     ?.find((item: any) => item?.name?.includes("Validation"));
 
+  // Limpa documentos ao desmontar a página
   useEffect(() => {
-
     return () => {
       setDocumentList([]);
     };
   }, [setDocumentList]);
 
-  if (!data) {
-    return;
-  }
+  if (!data) return null;
+
   const workflowData = toHistoryData(data);
   const historyData = parseHistoryToData(workflowData);
+
   const mockedApprovals = [
-    {
-      title: "Acceptance",
-      userName: "GinaS",
-      date: "2/12/2023",
-      hour: "10:22 AM",
-    },
-    {
-      title: "Compliance",
-      userName: "MarceloH",
-      date: "2/12/2023",
-      hour: "11:47 AM",
-    },
+    { title: "Acceptance", userName: "GinaS", date: "2/12/2023", hour: "10:22 AM" },
+    { title: "Compliance", userName: "MarceloH", date: "2/12/2023", hour: "11:47 AM" },
   ];
 
   const handleCancelRequest = (requestId: string, reason: string) => {
@@ -126,11 +87,11 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
       { requestId },
       {
         onSuccess: (response) => {
-          const data = response?.data;
+          const r = response?.data;
           const formatted = {
-            userThatCanceled: data.userName,
-            date: data.date,
-            reason: data.note || reason,
+            userThatCanceled: r.userName,
+            date: r.date,
+            reason: r.note || reason,
           };
           setDataCancelRequest(formatted);
           return formatted;
@@ -140,59 +101,51 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
   };
 
   async function onSubmit() {
-  try {
-    // 1) Validação básica
-    if (!documentList?.length) {
+    try {
+      if (!documentList?.length) {
+        setOpenErrorModal(true);
+        return;
+      }
+
+      const docsForSubmit = documentList.map(
+        (d) => d.serverPath ?? `${d.documentUUID}/${d.documentName}`
+      );
+
+      const payload = {
+        // ...adicione aqui os demais campos do formulário
+        documents: {
+          content: docsForSubmit,
+          required: false,
+        },
+        requestId,
+        comments: pendingComments,
+      };
+
+      await api.post("/v1/requests", payload);
+      // TODO: feedback de sucesso
+    } catch (err) {
+      console.error(err);
       setOpenErrorModal(true);
-      return;
     }
-
-    // 2) Monta array de paths estáveis
-    const docsForSubmit = documentList.map((d) => d.serverPath ?? `${d.documentUUID}/${d.documentName}`);
-
-    const payload = {
-      // ...demais campos do seu form
-      documents: {
-        content: docsForSubmit,
-        required: false,
-      },
-      requestId,
-      comments: pendingComments,
-    };
-
-    await api.post("/v1/requests", payload);
-
-    // sucesso...
-  } catch (err) {
-    console.error(err);
-    setOpenErrorModal(true);
   }
-}
-
- 
 
   return (
-    <Tabs
-      defaultValue={tabTriggerType}
-      className="min-h-screen w-full py-7 px-6"
-    >
+    <Tabs defaultValue={tabTriggerType} className="min-h-screen w-full py-7 px-6">
       <TabsList>
         <TabsTrigger
           value="request"
           className="-mb-1 rounded-t-lg font-figtree flex h-[45px] cursor-pointer flex-row items-center justify-center bg-background-primary text-sm font-normal text-[#636574] aria-selected:!bg-white aria-selected:text-[#1e2347]"
         >
-          {data.caseNumber ? (
-            <>{`Request: ${data.caseNumber}`}</>
-          ) : (
-            "New Request"
-          )}
+          {data.caseNumber ? `Request: ${data.caseNumber}` : "New Request"}
         </TabsTrigger>
+
         <TabsTrigger
           value="documents"
           className="-mb-1 rounded-t-lg font-figtree flex h-[45px] cursor-pointer flex-row items-center justify-center bg-background-primary text-sm font-normal text-[#636574] aria-selected:!bg-white aria-selected:text-[#1e2347]"
         >
           Documents
         </TabsTrigger>
+
         <TabsTrigger
           value="history"
           className="-mb-1 rounded-t-lg font-figtree flex h-[45px] cursor-pointer flex-row items-center justify-center bg-background-primary text-sm font-normal text-[#636574] aria-selected:!bg-white aria-selected:text-[#1e2347]"
@@ -201,6 +154,7 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
         </TabsTrigger>
       </TabsList>
 
+      {/* REQUEST TAB */}
       <TabsContent
         value="request"
         forceMount
@@ -215,10 +169,7 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
                 <div className="w-1/2 pr-4">
                   <TabsNavigation
                     tabs={[
-                      {
-                        label: "Creation",
-                        content: <CreationContent data={data} />,
-                      },
+                      { label: "Creation", content: <CreationContent data={data} /> },
                       {
                         label: "Validations",
                         content: (
@@ -232,33 +183,30 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
                     initialTab={0}
                   />
                 </div>
+
                 <div className="w-[6px] bg-[#F7F7F8] rounded-[15px] h-min-[605px] h-max-full"></div>
+
                 <div className="w-1/2 pl-4">
-                  <InstructionEmail></InstructionEmail>
+                  <InstructionEmail />
                 </div>
               </div>
+
               <div className="my-8">
                 <Comments
                   userName={userData.userName || ""}
-                  disabled={data ? true : false}
-                  onOutput={(comments: string[]) =>
-                    setPendingComments(comments)
-                  }
+                  disabled={!!data}
+                  onOutput={(comments: string[]) => setPendingComments(comments)}
                   requestId={requestId}
                 />
               </div>
+
               {data && <Approvals approvalsList={mockedApprovals} />}
 
               <Dialog open={openErrorModal} onOpenChange={setOpenErrorModal}>
                 <DialogContent className="w-[400px] h-[286px] pb-0">
                   <div className="flex flex-col justify-center items-center w-full">
                     <div className="flex justify-center">
-                      <Image
-                        src={AlertColorIcon}
-                        alt="Alert Icon"
-                        width={56}
-                        height={56}
-                      />
+                      <Image src={AlertColorIcon} alt="Alert Icon" width={56} height={56} />
                     </div>
                     <p className="text-[#1E2347] my-6 font-semibold text-lg text-center">
                       Please fix the highlighted errors before submitting.
@@ -275,14 +223,11 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
                   </div>
                 </DialogContent>
               </Dialog>
+
               {!data ? (
                 <div className="flex justify-between gap-4 mt-6">
                   <div className="flex gap-4">
-                    <Button
-                      variant="print"
-                      size="print"
-                      onClick={() => window.print()}
-                    >
+                    <Button variant="print" size="print" onClick={() => window.print()}>
                       <Image
                         src={PrintIcon}
                         alt="print-icon"
@@ -303,31 +248,26 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
                       className="mr-2"
                       onClick={() => setCancelRequestIsOpen(true)}
                     >
-                      <Image
-                        src={CancelRequestIcon}
-                        alt="CancelRequest"
-                      ></Image>
+                      <Image src={CancelRequestIcon} alt="CancelRequest" />
                       Cancel request
                     </Button>
                   </div>
                   <div className="flex justify-end mt-14">
-                    <Button
-                      variant="submit"
-                      size="submit"
-                     onClick={onSubmit}
-                    >
+                    <Button variant="submit" size="submit" onClick={onSubmit}>
                       Submit
                     </Button>
                   </div>
                 </div>
               )}
             </div>
+
             {requestQualificationIsOpen && (
               <RequestClarificationModal
                 open={requestQualificationIsOpen}
                 onOpenChange={setRequestQualificationIsOpen}
               />
             )}
+
             {cancelRequestIsOpen && (
               <CancelRequestModal
                 open={cancelRequestIsOpen}
@@ -343,22 +283,23 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
         )}
       </TabsContent>
 
+      {/* DOCUMENTS TAB */}
       <TabsContent
         value="documents"
-        className="mt-0 rounded-b-lg rounded-r-lg bg-[white] aria-selected:block data-[state=inactive]:hidden rounded-lg p-6"
+        className="mt-0 rounded-b-lg rounded-r-lg bg-white aria-selected:block data-[state=inactive]:hidden rounded-lg p-6"
       >
-        {
-           <Documents
-           baseUrl={process.env.NEXT_PUBLIC_BASE_URL ?? ""}
-           bucketName="conductor-client"
-           pathUrl="/v1/file"
-           getListDocument={documentList}
-           showUploader={true}
-           userData={userData}
-           onUploadDocuments={(docs: UploadedDocument[]) => setDocumentList(docs)}
-         />
-        }
+        <Documents
+          baseUrl={process.env.NEXT_PUBLIC_BASE_URL ?? ""}
+          bucketName="conductor-client"
+          pathUrl="/v1/file"
+          getListDocument={documentList}
+          showUploader={true}
+          userData={userData}
+          onUploadDocuments={(docs: UploadedDocument[]) => setDocumentList(docs)}
+        />
       </TabsContent>
+
+      {/* HISTORY TAB */}
       <TabsContent
         value="history"
         className="mt-0 rounded-b-lg rounded-r-lg bg-white p-6"
@@ -372,8 +313,6 @@ export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
           approvalsSteps={historyData.approvalsSteps}
         />
       </TabsContent>
-
-      <TabsContent value="history">{<p>History</p>}</TabsContent>
     </Tabs>
   );
 }
