--- a/.gitignore
+++ b/.gitignore
@@ -1,318 +1,68 @@
-/* eslint-disable @typescript-eslint/no-explicit-any */
-"use client";
-import React, { useEffect, useState } from "react";
-import { Tabs, TabsContent, TabsList, TabsTrigger } from "@/components/Tabs";
-import CreationContent from "./content/CreationContent";
-import ValidationContent from "./content/ValidationsContent";
-import { Documents } from "@/components/Documents";
-import { useAuthStore } from "@/app/store/auth/authStore";
-import { useDocumentStore } from "@/app/store/documentsStore/documentStore";
-import { UploadedDocument } from "@/app/store/types";
-import RequestConfigProvider from "@/app/providers/getRequestProvider";
-import { TabsNavigation } from "@/components/TabsNavigation";
-import Requests from "@/components/Requests";
-import History from "@/components/history/History";
-import { toHistoryData } from "@/app/utils/toHistoryData";
-import { parseHistoryToData } from "@/app/utils/parseHistoryToData";
-import InstructionEmail from "@/components/InstructionEmail";
-import { Comments } from "@/components/Comments";
-import { uuidv7 } from "uuidv7";
-import { Button } from "@/components/Button";
-import CancelRequestModal from "@/components/CancelRequestModal";
-import RequestClarificationModal from "@/components/RequestClarificationModal";
-import Image from "next/image";
-import PrintIcon from "@/app/assets/svg/print-color.svg";
-import { Dialog, DialogContent, DialogFooter } from "@/components/Modal";
-import { Approvals } from "@/components/Approvals";
-import AlertColorIcon from "@/app/assets/svg/alert-color.svg";
-import CancelRequestIcon from "@/app/assets/svg/close.svg";
-import { useCancelRequestProvider } from "@/app/providers/cancelRequestProvider";
-import api from "@/app/api"; // ajuste o path se for diferente
+Chat, fez o upload não deu loop, mas deu esse erro ao fazer submit
 
-type IPageTabsParams = {
-  params: {
-    requestName: string;
-    requestId?: string;
-  };
-  tabTriggerType: string;
-};
+Console Error
 
-type CancelRequestWarningProps = {
-  userThatCanceled: string;
-  date: string;
-  reason: string;
-};
 
-export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
-  const { getRequestConfig } = RequestConfigProvider(params.requestId);
-  const { userData } = useAuthStore((state) => state);
-  const { documentList, setDocumentList } = useDocumentStore((state) => state);
+`DialogContent` requires a `DialogTitle` for the component to be accessible for screen reader users.
 
-  const { data } = getRequestConfig;
+If you want to hide the `DialogTitle`, you can wrap it with our VisuallyHidden component.
 
-  const [pendingComments, setPendingComments] = useState<string[]>([]);
-  const requestId = data?.requestId ? data.requestId : uuidv7();
-  const [requestQualificationIsOpen, setRequestQualificationIsOpen] =
-    useState(false);
-  const [cancelRequestIsOpen, setCancelRequestIsOpen] = useState(false);
-  const [requestCanceled, setRequestCanceled] = useState(false);
-  const [openErrorModal, setOpenErrorModal] = useState<boolean>(false);
-  const { mutation } = useCancelRequestProvider();
-  const [dataCancelRequest, setDataCancelRequest] =
-    useState<CancelRequestWarningProps>();
+For more information, see https://radix-ui.com/primitives/docs/components/dialog
 
-  const validationStatus = data?.timeline
-    ?.flat()
-    ?.find((item: any) => item?.name?.includes("Validation"));
+src\components\Modal.tsx (38:5) @ _c1
 
-  // Limpa documentos ao desmontar a página
-  useEffect(() => {
-    return () => {
-      setDocumentList([]);
-    };
-  }, [setDocumentList]);
 
-  if (!data) return null;
+  36 |   <DialogPortal>
+  37 |     <DialogOverlay />
+> 38 |     <DialogPrimitive.Content
+     |     ^
+  39 |       ref={ref}
+  40 |       className={cn(
+  41 |         "fixed left-[50%] top-[50%] z-50 grid w-[560px] bg-[white] translate-x-[-50%] translate-y-[-50%] gap-4 border p-6 shadow-lg duration-200  data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[state=closed]:slide-out-to-left-1/2 data-[state=closed]:slide-out-to-top-[48%] data-[state=open]:slide-in-from-left-1/2 data-[state=open]:slide-in-from-top-[48%] sm:rounded-lg",
+Call Stack
+28
 
-  const workflowData = toHistoryData(data);
-  const historyData = parseHistoryToData(workflowData);
+Show 23 ignore-listed frame(s)
+_c1
+src\components\Modal.tsx (38:5)
+_c1
+src\components\Modal.tsx (36:3)
+Requests
+src\components\Requests.tsx (680:9)
+PageTabs
+src\app\(private)\Wire-Transfer---USD\page_tabs.tsx (55:9)
+Page
+src\app\(private)\Wire-Transfer---USD\page.tsx (9:9)
 
-  const mockedApprovals = [
-    { title: "Acceptance", userName: "GinaS", date: "2/12/2023", hour: "10:22 AM" },
-    { title: "Compliance", userName: "MarceloH", date: "2/12/2023", hour: "11:47 AM" },
-  ];
 
-  const handleCancelRequest = (requestId: string, reason: string) => {
-    mutation.mutate(
-      { requestId },
-      {
-        onSuccess: (response) => {
-          const r = response?.data;
-          const formatted = {
-            userThatCanceled: r.userName,
-            date: r.date,
-            reason: r.note || reason,
-          };
-          setDataCancelRequest(formatted);
-          return formatted;
-        },
-      }
-    );
-  };
+Request URL
+https://api.dev.k8s.safra.int/v1/wire-client-aggregator/pages/wire-client/submit
+Request Method
+POST
+Status Code
+400 Bad Request
+Remote Address
+192.168.100.240:443
+Referrer Policy
+strict-origin-when-cross-origin
 
-  async function onSubmit() {
-    try {
-      if (!documentList?.length) {
-        setOpenErrorModal(true);
-        return;
-      }
+Como vi no erro falando sobre page.tsx aqui esta ele
 
-      const docsForSubmit = documentList.map(
-        (d) => d.serverPath ?? `${d.documentUUID}/${d.documentName}`
-      );
 
-      const payload = {
-        // ...adicione aqui os demais campos do formulário
-        documents: {
-          content: docsForSubmit,
-          required: false,
-        },
-        requestId,
-        comments: pendingComments,
-      };
+import PageTitle from "@/components/PageTitle";
+import PageTabs from "./page_tabs";
 
-      await api.post("/v1/requests", payload);
-      // TODO: feedback de sucesso
-    } catch (err) {
-      console.error(err);
-      setOpenErrorModal(true);
-    }
-  }
-
+export default async function Page({ params }: any) {
+  params = await params;
   return (
-    <Tabs defaultValue={tabTriggerType} className="min-h-screen w-full py-7 px-6">
-      <TabsList>
-        <TabsTrigger
-          value="request"
-          className="-mb-1 rounded-t-lg font-figtree flex h-[45px] cursor-pointer flex-row items-center justify-center bg-background-primary text-sm font-normal text-[#636574] aria-selected:!bg-white aria-selected:text-[#1e2347]"
-        >
-          {data.caseNumber ? `Request: ${data.caseNumber}` : "New Request"}
-        </TabsTrigger>
-
-        <TabsTrigger
-          value="documents"
-          className="-mb-1 rounded-t-lg font-figtree flex h-[45px] cursor-pointer flex-row items-center justify-center bg-background-primary text-sm font-normal text-[#636574] aria-selected:!bg-white aria-selected:text-[#1e2347]"
-        >
-          Documents
-        </TabsTrigger>
-
-        <TabsTrigger
-          value="history"
-          className="-mb-1 rounded-t-lg font-figtree flex h-[45px] cursor-pointer flex-row items-center justify-center bg-background-primary text-sm font-normal text-[#636574] aria-selected:!bg-white aria-selected:text-[#1e2347]"
-        >
-          History
-        </TabsTrigger>
-      </TabsList>
-
-      {/* REQUEST TAB */}
-      <TabsContent
-        value="request"
-        forceMount
-        className="aria-selected:block data-[state=inactive]:hidden"
-      >
-        {validationStatus.status === "waiting" ? (
-          <Requests data={data} />
-        ) : (
-          <div className="w-full flex">
-            <div className="bg-white rounded-lg p-8">
-              <div className="w-full flex">
-                <div className="w-1/2 pr-4">
-                  <TabsNavigation
-                    tabs={[
-                      { label: "Creation", content: <CreationContent data={data} /> },
-                      {
-                        label: "Validations",
-                        content: (
-                          <ValidationContent
-                            data={data}
-                            cancelRequestWarning={dataCancelRequest}
-                          />
-                        ),
-                      },
-                    ]}
-                    initialTab={0}
-                  />
-                </div>
-
-                <div className="w-[6px] bg-[#F7F7F8] rounded-[15px] h-min-[605px] h-max-full"></div>
-
-                <div className="w-1/2 pl-4">
-                  <InstructionEmail />
-                </div>
-              </div>
-
-              <div className="my-8">
-                <Comments
-                  userName={userData.userName || ""}
-                  disabled={!!data}
-                  onOutput={(comments: string[]) => setPendingComments(comments)}
-                  requestId={requestId}
-                />
-              </div>
-
-              {data && <Approvals approvalsList={mockedApprovals} />}
-
-              <Dialog open={openErrorModal} onOpenChange={setOpenErrorModal}>
-                <DialogContent className="w-[400px] h-[286px] pb-0">
-                  <div className="flex flex-col justify-center items-center w-full">
-                    <div className="flex justify-center">
-                      <Image src={AlertColorIcon} alt="Alert Icon" width={56} height={56} />
-                    </div>
-                    <p className="text-[#1E2347] my-6 font-semibold text-lg text-center">
-                      Please fix the highlighted errors before submitting.
-                    </p>
-                    <DialogFooter className="w-full">
-                      <Button
-                        variant="modalError"
-                        size="modalError"
-                        onClick={() => setOpenErrorModal(false)}
-                      >
-                        Close
-                      </Button>
-                    </DialogFooter>
-                  </div>
-                </DialogContent>
-              </Dialog>
-
-              {!data ? (
-                <div className="flex justify-between gap-4 mt-6">
-                  <div className="flex gap-4">
-                    <Button variant="print" size="print" onClick={() => window.print()}>
-                      <Image
-                        src={PrintIcon}
-                        alt="print-icon"
-                        width={24}
-                        height={24}
-                        className="mr-2"
-                      />
-                      Print
-                    </Button>
-                  </div>
-                </div>
-              ) : (
-                <div className="flex justify-between">
-                  <div className="flex justify-end mt-14">
-                    <Button
-                      variant="cancelRequest"
-                      size="cancelRequest"
-                      className="mr-2"
-                      onClick={() => setCancelRequestIsOpen(true)}
-                    >
-                      <Image src={CancelRequestIcon} alt="CancelRequest" />
-                      Cancel request
-                    </Button>
-                  </div>
-                  <div className="flex justify-end mt-14">
-                    <Button variant="submit" size="submit" onClick={onSubmit}>
-                      Submit
-                    </Button>
-                  </div>
-                </div>
-              )}
-            </div>
-
-            {requestQualificationIsOpen && (
-              <RequestClarificationModal
-                open={requestQualificationIsOpen}
-                onOpenChange={setRequestQualificationIsOpen}
-              />
-            )}
-
-            {cancelRequestIsOpen && (
-              <CancelRequestModal
-                open={cancelRequestIsOpen}
-                onClose={() => setCancelRequestIsOpen(false)}
-                onSubmit={(reason) => {
-                  handleCancelRequest(data?.requestId, reason);
-                  setRequestCanceled(true);
-                }}
-                requestId={data?.requestId}
-              />
-            )}
-          </div>
-        )}
-      </TabsContent>
-
-      {/* DOCUMENTS TAB */}
-      <TabsContent
-        value="documents"
-        className="mt-0 rounded-b-lg rounded-r-lg bg-white aria-selected:block data-[state=inactive]:hidden rounded-lg p-6"
-      >
-        <Documents
-          baseUrl={process.env.NEXT_PUBLIC_BASE_URL ?? ""}
-          bucketName="conductor-client"
-          pathUrl="/v1/file"
-          getListDocument={documentList}
-          showUploader={true}
-          userData={userData}
-          onUploadDocuments={(docs: UploadedDocument[]) => setDocumentList(docs)}
+    <>
+      <PageTitle title="Wire Transfer - USD" />
+      <div className="flex min-h-screen flex-col items-center">
+        <PageTabs
+          params={{ requestName: "wire-trasnfer", requestId: params.requestId }}
+          tabTriggerType="request"
         />
-      </TabsContent>
-
-      {/* HISTORY TAB */}
-      <TabsContent
-        value="history"
-        className="mt-0 rounded-b-lg rounded-r-lg bg-white p-6"
-      >
-        <History
-          status={historyData.status}
-          data={historyData.data}
-          cardRowData={historyData.cardRowData}
-          dataDisplayData={historyData.dataDisplayData}
-          selectedBank={historyData.selectedBank}
-          approvalsSteps={historyData.approvalsSteps}
-        />
-      </TabsContent>
-    </Tabs>
+      </div>
+    </>
   );
 }
