--- a/.gitignore
+++ b/.gitignore
@@ -1,68 +1,215 @@
-Chat, fez o upload não deu loop, mas deu esse erro ao fazer submit
-
-Console Error
-
-
-`DialogContent` requires a `DialogTitle` for the component to be accessible for screen reader users.
-
-If you want to hide the `DialogTitle`, you can wrap it with our VisuallyHidden component.
-
-For more information, see https://radix-ui.com/primitives/docs/components/dialog
-
-src\components\Modal.tsx (38:5) @ _c1
-
-
-  36 |   <DialogPortal>
-  37 |     <DialogOverlay />
-> 38 |     <DialogPrimitive.Content
-     |     ^
-  39 |       ref={ref}
-  40 |       className={cn(
-  41 |         "fixed left-[50%] top-[50%] z-50 grid w-[560px] bg-[white] translate-x-[-50%] translate-y-[-50%] gap-4 border p-6 shadow-lg duration-200  data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[state=closed]:slide-out-to-left-1/2 data-[state=closed]:slide-out-to-top-[48%] data-[state=open]:slide-in-from-left-1/2 data-[state=open]:slide-in-from-top-[48%] sm:rounded-lg",
-Call Stack
-28
-
-Show 23 ignore-listed frame(s)
-_c1
-src\components\Modal.tsx (38:5)
-_c1
-src\components\Modal.tsx (36:3)
-Requests
-src\components\Requests.tsx (680:9)
-PageTabs
-src\app\(private)\Wire-Transfer---USD\page_tabs.tsx (55:9)
-Page
-src\app\(private)\Wire-Transfer---USD\page.tsx (9:9)
-
-
-Request URL
-https://api.dev.k8s.safra.int/v1/wire-client-aggregator/pages/wire-client/submit
-Request Method
-POST
-Status Code
-400 Bad Request
-Remote Address
-192.168.100.240:443
-Referrer Policy
-strict-origin-when-cross-origin
-
-Como vi no erro falando sobre page.tsx aqui esta ele
-
-
-import PageTitle from "@/components/PageTitle";
-import PageTabs from "./page_tabs";
-
-export default async function Page({ params }: any) {
-  params = await params;
-  return (
-    <>
-      <PageTitle title="Wire Transfer - USD" />
-      <div className="flex min-h-screen flex-col items-center">
-        <PageTabs
-          params={{ requestName: "wire-trasnfer", requestId: params.requestId }}
-          tabTriggerType="request"
-        />
-      </div>
-    </>
-  );
+{
+    "code": 400,
+    "data": {
+        "error": {
+            "code": 400,
+            "data": {
+                "requests": null,
+                "errorMessages": [],
+                "jsonRequest": {
+                    "transferType": {
+                        "content": "usd-domestic",
+                        "required": true
+                    },
+                    "initiator": {
+                        "content": "Maria Peixoto",
+                        "required": true
+                    },
+                    "cifAccountNumber": {
+                        "content": "NAA0011",
+                        "required": true
+                    },
+                    "accountNumber": {
+                        "content": "17045091-0",
+                        "required": true
+                    },
+                    "availableBalance": {
+                        "content": "0",
+                        "required": false
+                    },
+                    "amountUSD": {
+                        "content": "23323",
+                        "required": true
+                    },
+                    "levelUrgency": {
+                        "content": "Normal",
+                        "required": false
+                    },
+                    "originSource": {
+                        "content": "email_ao",
+                        "required": true
+                    },
+                    "clientEmail": {
+                        "content": "temporaryEmail",
+                        "required": false
+                    },
+                    "temporaryClientEmail": {
+                        "content": "",
+                        "required": true,
+                        "errors": [
+                            "temporaryClientEmail is required"
+                        ]
+                    },
+                    "emailIsVerified": {
+                        "content": false,
+                        "required": false
+                    },
+                    "insufficientFunds": {
+                        "content": "yes",
+                        "required": false
+                    },
+                    "insufficientFundsComment": {
+                        "content": "",
+                        "required": false
+                    },
+                    "notificationContactAttempt": {
+                        "content": false,
+                        "required": false
+                    },
+                    "notificationProcesedPayPlus": {
+                        "content": false,
+                        "required": false
+                    },
+                    "notificationAdditionalUsers": {
+                        "content": false,
+                        "required": false
+                    },
+                    "notificationUsers": {
+                        "content": [],
+                        "required": false
+                    },
+                    "forceCallbackToggle": {
+                        "content": false,
+                        "required": false
+                    },
+                    "forceCallbackBestNumberCall": {
+                        "content": "",
+                        "required": false
+                    },
+                    "forceCallbackTemporaryPhoneNumber": {
+                        "content": "",
+                        "required": false
+                    },
+                    "emailAddress": {
+                        "content": [],
+                        "required": false
+                    },
+                    "documents": {
+                        "content": [
+                            "document.pdf"
+                        ],
+                        "required": false
+                    },
+                    "temporaryEmail": {
+                        "content": "",
+                        "required": false
+                    },
+                    "reasonTransaction": {
+                        "content": "donationGift",
+                        "required": true
+                    },
+                    "pleaseSpecify": {
+                        "content": "",
+                        "required": false
+                    },
+                    "bankAbaRoutingNumber": {
+                        "content": "",
+                        "required": false
+                    },
+                    "bankCountry": {
+                        "content": "US",
+                        "required": false
+                    },
+                    "beneficiaryCountry": {
+                        "content": "US",
+                        "required": false
+                    },
+                    "relationshipBeneficiary": {
+                        "content": "businessPartner",
+                        "required": true
+                    },
+                    "swiftBicBeneficiary": {
+                        "content": "",
+                        "required": false
+                    },
+                    "selectedBeneficiary": {
+                        "content": "",
+                        "required": false
+                    },
+                    "templateName": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryAccountNumber": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryBankCity": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryBankName": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryName": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryAddressLine1": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryAddressLine2": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryCity": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryState": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryZipCode": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryOBIToggle": {
+                        "content": false,
+                        "required": false
+                    },
+                    "beneficiaryOBIFFC1": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryOBIFFC2": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryOBIFFC3": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryOBIFFC4": {
+                        "content": "",
+                        "required": false
+                    },
+                    "beneficiaryToggle": {
+                        "content": false,
+                        "required": false
+                    },
+                    "accountOfficer": {
+                        "content": "Ana C/PatGad URU         BR 44 [153]",
+                        "required": false
+                    },
+                    "accountName": {
+                        "content": "JAIME NOWINSKI ZLOCISTY",
+                        "required": false
+                    }
+                }
+            }
+        }
+    }
 }
